--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Portfolio-Website",
-  "homepage": "https://hcanning.github.io/pagetest1/",
+  "homepage": "https://hcanning.github.io/pagestest1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
